deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: e3dc-rest
  labels:
    app: e3dc-rest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: e3dc-rest
  template:
    metadata:
      labels:
        app: e3dc-rest
    spec:
      containers:
      - name: e3dc-rest
        image: vchrisb/e3dc-rest:latest
        ports:
        - containerPort: 8080
